--- a/src/components/security/security.scss
+++ b/src/components/security/security.scss
@@ -84,7 +84,6 @@
     cursor: pointer;
 }
 
-
 .table__title:first-child,
 .security__data:first-child {
     padding-left: 24px;
@@ -166,8 +165,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 24px;
-    border-bottom: solid 1px var(--N200);
 
     &:first-child {
         margin-top: 0px;
@@ -185,7 +182,7 @@
     letter-spacing: normal;
     color: var(--N900);
     margin-top: 0px;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     position: relative;
 
     &::before {
@@ -194,21 +191,16 @@
         height: 18px;
         position: absolute;
         left: -20px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
     }
 }
 
 .vulnerability__subtitle {
     font-size: 12px;
     font-weight: normal;
-    line-height: 1.67;
     letter-spacing: normal;
-    color: var(--N500);
     margin-top: 0;
-    margin-bottom: 24px;
-}
-
-.vulnerability__menu {
-    width: 180px;
 }
 
 .vulnerability__title--critical {
@@ -219,25 +211,25 @@
 
 .vulnerability__title--high {
     &::before {
-        background-color: var(--R300);
+        background-color: var(--R500);
     }
 }
 
 .vulnerability__title--unknown {
     &::before {
-        background-color: var(--N200);
+        background-color: var(--N300);
     }
 }
 
 .vulnerability__title--medium {
     &::before {
-        background-color: var(--O200);
+        background-color: var(--O500);
     }
 }
 
 .vulnerability__title--low {
     &::before {
-        background-color: var(--Y200);
+        background-color: var(--Y500);
     }
 }
 
@@ -386,7 +378,7 @@
 .scanned-object {
     margin: 20px;
     padding: 16px;
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .trigger-modal__body--security-scan {
@@ -488,5 +480,6 @@
     .search-bar {
         border-top-left-radius: 0 !important;
         border-bottom-left-radius: 0 !important;
+        border-left: none;
     }
 }
